<resources>
    <string name="app_name">FeeCal</string>
    <string name="Oneway">One-Way</string>
    <string name="Oneday">One-day</string>
    <string name="Weekly">Weekly pass</string>
    <string name="Adult">Adult</string>
    <string name="Students">Students</string>
    <string name="Aged">Aged</string>
    <string name="Clear">Clear</string>
    <string name="Calculation">Calculation</string>
    <string name="mon2">$2</string>
    <string name="mon5">$5</string>
    <string name="mon10">$10</string>
    <string name="Fee">Fee</string>
    <string name="Cash">Cash</string>
    <string name="Change">Change</string>
</resources>
