<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:umanoPanelHeight="204dp"
        sothree:umanoShadowHeight="4dp"
        >

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Oneway"
                    android:id="@+id/textView"
                    android:textSize="20sp"
                    android:layout_marginTop="10sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Oneday"
                    android:id="@+id/textView2"
                    android:textSize="20sp"
                    android:layout_marginTop="23sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Weekly"
                    android:id="@+id/textView3"
                    android:textSize="20sp"
                    android:layout_marginTop="23sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cash"
                    android:id="@+id/textView4"
                    android:textSize="20sp"
                    android:layout_marginTop="23sp"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Adult"
                    android:id="@+id/wayadult"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Adult"
                    android:id="@+id/dayadult"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Adult"
                    android:id="@+id/weekadult"/>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon2"
                    android:id="@+id/mon2"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Students"
                    android:id="@+id/waystu"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Students"
                    android:id="@+id/daystu"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Students"
                    android:id="@+id/weekstu"/>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon5"
                    android:id="@+id/mon5"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Aged"
                    android:id="@+id/wayage"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Aged"
                    android:id="@+id/dayage"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Aged"
                    android:id="@+id/weekage"/>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon10"
                    android:id="@+id/mon10"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Clear"
                    android:id="@+id/clear"
                    android:layout_marginTop="20sp"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/change"/>
    </LinearLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>

